--- a/css/styles.css
+++ b/css/styles.css
@@ -358,13 +358,16 @@ html {
   margin-right: 8px;
   margin-top: 78px;
   cursor: pointer;
-  transition-duration: 250ms;
-  transition-delay: 250ms;
+  opacity: 0;
 }
-
+.product-list-item:hover,
+.img-button {
+  opacity: 1;
+}
 .img-button:hover,
 .img-button:focus {
   background-color: #1abc9c;
+  transition-duration: 250ms;
 }
 
 .img-button::before {
@@ -376,6 +379,7 @@ html {
   background-position: center;
   transform: translateX(-10%);
 }
+
 .like::before {
   background-image: url(../images/icons/like.png);
 }
@@ -651,9 +655,19 @@ html {
 }
 
 /* animation */
-
-/* .pulse {
-  color: #4ec6ab;
-  text-shadow: 0px 0px 5px #fe1800, 0px 0px 7px #dbbcb8;
-  animation: blur 1500ms linear infinite;
-} */
+.pulse {
+  -webkit-animation: pulsate 1000ms linear;
+  -webkit-animation-iteration-count: infinite;
+  opacity: 0.5;
+}
+@-webkit-keyframes pulsate {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
