--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
   --text-color: #515151;
-  --font: "Roboto", "Open Sans";
+  --font: 'Roboto', 'Open Sans';
 }
 
 html {
@@ -57,7 +57,7 @@ html {
 }
 .tel::before {
   display: inline-block;
-  content: "";
+  content: '';
   width: 16px;
   height: 15px;
   background-image: url(../images/icons/phone.png);
@@ -69,7 +69,7 @@ html {
 
 .mail::before {
   display: inline-block;
-  content: "";
+  content: '';
   width: 22px;
   height: 14px;
   background-image: url(../images/icons/mail.png);
@@ -132,12 +132,16 @@ html {
 
 .banner {
   height: 600px;
-  content: "";
+  content: '';
   background-image: linear-gradient(rgba(0, 0, 0, 0.53), rgba(0, 0, 0, 0.53)),
     url(../images/slide4.png);
-  position: relative;
+  /* position: relative; */
   background-size: cover;
   background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .banner-span {
@@ -147,11 +151,11 @@ html {
 
 .banner-description,
 .banner-description-bold {
-  position: absolute;
+  /* position: absolute; */
   margin: 0;
-  top: 140px;
-  left: 50%;
-  transform: translateX(-50%);
+  /* top: 140px; */
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
   text-transform: uppercase;
   font-size: 48px;
   color: #fff;
@@ -171,6 +175,7 @@ html {
 }
 
 .banner a {
+  position: relative;
   display: block;
   text-decoration: none;
   text-align: center;
@@ -186,7 +191,7 @@ html {
   color: #fff;
   cursor: pointer;
   z-index: 2;
-  transform: translate(580px, 270px);
+  /* transform: translate(580px, 270px); */
 }
 .banner a:hover,
 .banner a:focus {
@@ -284,7 +289,7 @@ html {
   font-weight: 300;
 }
 .about-list-item::before {
-  content: "";
+  content: '';
   display: block;
   height: 68px;
   background-repeat: no-repeat;
@@ -306,9 +311,6 @@ html {
 /* .about-list-item, */
 
 .new-collection {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: #e9effd;
@@ -371,7 +373,7 @@ html {
 }
 
 .img-button::before {
-  content: "";
+  content: '';
   display: block;
   height: 50px;
   min-width: 50px;
@@ -429,9 +431,10 @@ html {
   color: var(--text-color);
   font-weight: 900;
   margin-bottom: 120px;
+  text-align: center;
 }
 .header-section::after {
-  content: "";
+  content: '';
   display: block;
   width: 160px;
   height: 14px;
@@ -547,7 +550,7 @@ html {
 }
 
 .news-header::after {
-  content: "";
+  content: '';
   display: block;
   width: 160px;
   height: 14px;
@@ -602,7 +605,7 @@ html {
 }
 .title::after {
   display: block;
-  content: "";
+  content: '';
   background-image: url(../images/icons/ftr-underline.png);
   background-repeat: no-repeat;
   margin-top: 26px;
